SUBDIRS = src

EXTRA_DIST = README

doc_DATA = README

if USE_XMLRPC
wwwdir = $(pkgdatadir)/web-ui
wwwiconsdir = $(wwwdir)/icons
dist_www_DATA = web-ui/client.html web-ui/core_params.js web-ui/dialog.js web-ui/dialog_bg.png web-ui/header.jpg web-ui/input.js web-ui/main.css web-ui/minilib.js web-ui/pom.js web-ui/rules.js web-ui/style.css web-ui/targets.js web-ui/tools.js web-ui/xml.js web-ui/xmlrpc.js
dist_wwwicons_DATA = web-ui/icons/add.gif web-ui/icons/arrows_green.gif web-ui/icons/arrows_red.gif web-ui/icons/delete.gif web-ui/icons/edit.gif web-ui/icons/empty.gif web-ui/icons/green_ball.gif web-ui/icons/join.gif web-ui/icons/joinbottom.gif web-ui/icons/line.gif web-ui/icons/minus.gif web-ui/icons/minusbottom.gif web-ui/icons/nolines_minus.gif web-ui/icons/nolines_plus.gif web-ui/icons/plus.gif web-ui/icons/plusbottom.gif web-ui/icons/red_ball.gif
endif
